@@ -8,6 +8,7 @@ Changelog
 - Multipart Titles: Removed field from rj type. #FLOW-559
 - Zotero Export: Include works author in title field and use review author for
   author field. #FLOW-651
+- External Fulltext: Fixed setting on Volume level. #FLOW-741
 
 
 4.5.0 (2019-06-05)
